--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/server.js",
     "lint": "eslint src --ext .ts",
     "typecheck": "tsc --noEmit",
-    "seed": "tsx src/database/runSeed.ts"
+    "seed": "tsx src/database/runSeed.ts",
+    "test-printer": "tsx src/scripts/testPrinter.ts"
   },
   "dependencies": {
     "@types/better-sqlite3": "^7.6.13",
